fix collapsed comments

--- a/src/components/Shoutout/Shoutout.css
+++ b/src/components/Shoutout/Shoutout.css
@@ -24,7 +24,8 @@ button, .emoji, .commentIcon {
 }
 
 .shoutoutOuterContainer {
-  margin: 30px 100px -85px
+  margin: 30px 100px -85px;
+  overflow: hidden;
 }
 
 .shoutoutContainer {
@@ -82,7 +83,9 @@ h3 {
 
 .commentContainerClosed {
   transform: translateY(-100%);
+  opacity: 0;
   transition: .7s ease-in-out;
+  margin-top: 20px;
 }
 
 .commentContainerOpen {
